# sonia_common_ros2

./: .dockerignore  Dockerfile.amd64  Dockerfile.arm64v8  LICENSE
.devcontainer/: devcontainer.json
sonia_common_cpp/: CMakeLists.txt  package.xml
sonia_common_cpp/include/sonia_common_cpp/: EthernetSocket.h  SerialConn.h
sonia_common_cpp/src/: EthernetSocket.cpp  SerialConn.cpp
sonia_common_py/: .pyrcfile  package.xml  requirements.txt  setup.cfg  setup.py
sonia_common_py/html/: annotated.html  annotated_dup.js  classes.html  dir_5e7dee558b26a0b0b641d64570359e8a.html  dir_5e7dee558b26a0b0b641d64570359e8a.js  dir_93a7aee40ed571d79a4885864dbfaa21.html  dir_93a7aee40ed571d79a4885864dbfaa21.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  namespacemembers.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
sonia_common_py/html/d2/d5e/: classsonia__common__py_1_1execptions_1_1exception__codes_1_1_sonia_common_exception_codes.html  (+1 more)
sonia_common_py/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_4.js  namespaces_0.js  searchdata.js  variables_3.js  variables_5.js
sonia_common_py/sonia_common_py/: serial_conn.py  serial_interface.py
sonia_common_py/sonia_common_py/execptions/: __init__.py  exception_codes.py  sonia_common_exception.py
sonia_common_ros2/: CMakeLists.txt  package.xml
sonia_common_ros2/config/: global_params.yaml
sonia_common_ros2/launch/: global_parameter_server.launch.py
sonia_common_ros2/msg/: MotorVoltages.msg  SerialMessage.msg
sonia_common_ros2/src/: global_parameter_server_node.cpp
sonia_common_ros2/srv/: DropperService.srv  SerialService.srv
(+30 files in other folders)
